don't throw exceptions on append

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>me.moocar</groupId>
   <artifactId>logback-gelf</artifactId>
   <packaging>jar</packaging>
-  <version>0.13-SNAPSHOT</version>
+  <version>0.13A.m081072</version>
   <name>logback-gelf</name>
 
   <parent>
@@ -29,9 +29,9 @@
   </licenses>
 
   <scm>
-    <connection>scm:git:git@github.com:Moocar/logback-gelf.git</connection>
-    <developerConnection>scm:git:git@github.com:Moocar/logback-gelf.git</developerConnection>
-    <url>git@github.com:Moocar/logback-gelf.git</url>
+    <connection>scm:git:git@github.com:m081072/logback-gelf.git</connection>
+    <developerConnection>scm:git:git@github.com:m081072/logback-gelf.git</developerConnection>
+    <url>git@github.com:m081072/logback-gelf.git</url>
   </scm>
 
   <developers>
